--- a/public/index.html
+++ b/public/index.html
@@ -1,14 +1,14 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="fr">
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width,initial-scale=1" />
   <title>TANGO WHISKY eQSL</title>
-  <link rel="stylesheet" href="style.css" />
+  <link rel="stylesheet" href="style.css">
 </head>
 <body>
   <header>
-    <img src="https://res.cloudinary.com/dqpvrfjeu/image/upload/v1763588704/akyt1anm1inwmygj3vfz.png" class="logo" alt="TW Logo">
+    <img src="https://res.cloudinary.com/dqpvrfjeu/image/upload/v1763588704/akyt1anm1inwmygj3vfz.png" class="logo" alt="TW">
     <h1>TANGO WHISKY eQSL</h1>
   </header>
 
@@ -22,75 +22,51 @@
   <div id="passwordBox" class="box hidden">
     <h3>Mot de passe</h3>
     <input type="password" id="pwd">
-    <div style="margin-top:10px">
-      <button onclick="verifyPassword()" class="primary">Valider</button>
-      <button onclick="cancelPassword()" class="secondary">Annuler</button>
-    </div>
+    <button onclick="verifyPassword()">Valider</button>
   </div>
 
   <main>
     <section id="home" class="section visible">
       <h2>Bienvenue</h2>
-      <p>Portail eQSL TANGO WHISKY — Créez, partagez, téléchargez vos QSL.</p>
+      <p>Portail eQSL TANGO WHISKY</p>
     </section>
 
     <section id="gallery" class="section hidden">
-      <h2>Galerie des QSL</h2>
-      <div id="galleryContent" class="grid">Chargement…</div>
+      <h2>Galerie</h2>
+      <div id="galleryContent">Chargement…</div>
     </section>
 
     <section id="create" class="section hidden">
       <h2>Créer / Générer une QSL</h2>
-
       <form id="genForm" enctype="multipart/form-data">
-        <div class="row"><label>Indicatif :</label><input name="indicatif" required></div>
-
+        <div class="row"><label>Indicatif</label><input name="indicatif" required></div>
         <div class="row two">
-          <div><label>Date :</label><input type="date" name="date"></div>
-          <div><label>UTC :</label><input type="time" name="time"></div>
+          <div><label>Date</label><input name="date" type="date"></div>
+          <div><label>Heure (UTC)</label><input name="time" type="time"></div>
         </div>
-
         <div class="row two">
-          <div><label>Bande :</label><input name="band"></div>
-          <div><label>Mode :</label><input name="mode"></div>
+          <div><label>Bande</label><input name="band"></div>
+          <div><label>Mode</label><input name="mode"></div>
         </div>
-
         <div class="row two">
-          <div><label>Report :</label><input name="report"></div>
-          <div><label>Note (max 120) :</label><input name="note" maxlength="120"></div>
+          <div><label>Report</label><input name="report"></div>
+          <div><label>Note (max 120)</label><input name="note" maxlength="200"></div>
         </div>
-
-        <div class="row">
-          <label>Image QSL (obligatoire) :</label>
-          <input type="file" name="qsl" accept="image/*" required>
-        </div>
-
-        <div class="row">
-          <label>Template personnalisé (optionnel) :</label>
-          <input type="file" name="template" accept="image/*">
-        </div>
-
-        <div class="row actions">
-          <button type="submit" class="primary">Générer & Envoyer</button>
-        </div>
+        <div class="row"><label>Image QSL (obligatoire)</label><input type="file" name="qsl" accept="image/*" required></div>
+        <div class="row"><button class="primary" type="submit">Générer & Envoyer</button></div>
       </form>
-
       <div id="genPreview" class="preview"></div>
     </section>
 
     <section id="download" class="section hidden">
-      <h2>Télécharger votre QSL</h2>
-
-      <div class="row">
-        <input id="dlCall" placeholder="Entrez un indicatif (ex: 14tw000)">
-        <button id="btnSearch" class="primary">Rechercher</button>
-      </div>
-
-      <div id="dlPreview" class="grid"></div>
+      <h2>Télécharger</h2>
+      <input id="dlCall" placeholder="Votre indicatif">
+      <button id="btnSearch" class="primary">Rechercher</button>
+      <div id="dlPreview"></div>
     </section>
   </main>
 
-  
+  <footer>TANGO WHISKY © 2025</footer>
 
   <script src="script.js"></script>
 </body>
