--- a/public/index.html
+++ b/public/index.html
@@ -18,9 +18,10 @@
   <!-- NAVIGATION -->
   <nav>
     <button onclick="showSection('home')">Accueil</button>
-    <button onclick="showPassword('gallery')">Galerie</button>
-    <button onclick="showPassword('create')">Créer / Ajouter</button>
-    <button onclick="showSection('download')">Télécharger</button>
+   <button onclick="openGallery()">Galerie</button>
+<button onclick="openCreate()">Créer / Ajouter</button>
+
+<button onclick="showSection('download')">Télécharger</button>
   </nav>
 
   <!-- PASSWORD PROTECT -->
