--- a/public/index.html
+++ b/public/index.html
@@ -4,15 +4,18 @@
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width,initial-scale=1" />
   <title>TANGO WHISKY eQSL</title>
+
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
 
+  <!-- HEADER -->
   <header>
     <img src="https://res.cloudinary.com/dqpvrfjeu/image/upload/v1763588704/akyt1anm1inwmygj3vfz.png" class="logo" alt="TW">
     <h1>TANGO WHISKY eQSL</h1>
   </header>
 
+  <!-- NAVIGATION -->
   <nav>
     <button onclick="showSection('home')">Accueil</button>
     <button onclick="openGallery()">Galerie</button>
@@ -20,18 +23,19 @@
     <button onclick="showSection('download')">Télécharger</button>
   </nav>
 
-  <!-- Password modal (initially hidden) -->
-  <div id="passwordBox" class="box hidden" aria-hidden="true">
+  <!-- PASSWORD POPUP -->
+  <div id="passwordBox" class="hidden">
     <h3>Mot de passe</h3>
-    <input type="password" id="pwd" />
-    <button onclick="verifyPassword()" class="primary">Valider</button>
+    <input type="password" id="pwd">
+    <button onclick="verifyPassword()">Valider</button>
   </div>
 
   <main>
+
     <!-- HOME -->
     <section id="home" class="section visible">
       <h2>Bienvenue</h2>
-      <p>Portail eQSL TANGO WHISKY — créer, prévisualiser, partager.</p>
+      <p>Portail eQSL TANGO WHISKY</p>
     </section>
 
     <!-- GALLERY -->
@@ -40,40 +44,45 @@
       <div id="galleryContent">Chargement…</div>
     </section>
 
-    <!-- CREATE / GENERATE -->
+    <!-- CREATE -->
     <section id="create" class="section hidden">
       <h2>Créer / Générer une QSL</h2>
 
       <form id="genForm" enctype="multipart/form-data" class="wideForm">
+
         <div class="twoColumns">
+
           <div>
             <label>Indicatif :</label>
             <input type="text" name="indicatif" required>
 
             <label>Date :</label>
-            <input type="date" name="date">
+            <input type="text" name="date" placeholder="2025-01-01">
 
             <label>UTC :</label>
-            <input type="time" name="time">
+            <input type="text" name="time" placeholder="12:00">
 
             <label>Bande :</label>
             <input type="text" name="band" placeholder="11m">
+
             <label>Mode :</label>
             <input type="text" name="mode" placeholder="USB">
+
             <label>Report :</label>
             <input type="text" name="report" placeholder="59">
           </div>
 
           <div>
-            <label>Note (max 120 caractères) :</label>
-            <textarea name="note" maxlength="120" style="height:140px"></textarea>
+            <label>Note :</label>
+            <textarea name="note" maxlength="200" style="height:140px"></textarea>
 
-            <label>Image QSL (obligatoire) :</label>
+            <label>Image QSL :</label>
             <input type="file" name="qsl" accept="image/*" required>
           </div>
+
         </div>
 
-        <button class="primary" type="submit">Générer & Envoyer</button>
+        <button class="primary" type="submit">Générer QSL</button>
       </form>
 
       <div id="genPreview" class="preview"></div>
@@ -81,21 +90,19 @@
 
     <!-- DOWNLOAD -->
     <section id="download" class="section hidden">
-      <h2>Télécharger</h2>
+      <h2>Télécharger une QSL</h2>
 
-      <div class="twoColumns" style="align-items:start">
-        <div>
-          <input id="dlCall" placeholder="Votre indicatif">
-          <button id="btnSearch" class="primary">Rechercher</button>
-        </div>
-        <div id="dlPreview"></div>
-      </div>
+      <input id="dlCall" placeholder="Votre indicatif">
+      <button id="btnSearch" class="primary">Rechercher</button>
 
+      <div id="dlPreview"></div>
     </section>
+
   </main>
 
   <footer>TANGO WHISKY © 2025</footer>
 
   <script src="script.js"></script>
+
 </body>
 </html>
