--- a/public/index.html
+++ b/public/index.html
@@ -4,105 +4,85 @@
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width,initial-scale=1" />
   <title>TANGO WHISKY eQSL</title>
-
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
-
-  <!-- HEADER -->
   <header>
     <img src="https://res.cloudinary.com/dqpvrfjeu/image/upload/v1763588704/akyt1anm1inwmygj3vfz.png" class="logo" alt="TW">
     <h1>TANGO WHISKY eQSL</h1>
   </header>
 
-  <!-- NAVIGATION -->
   <nav>
     <button onclick="showSection('home')">Accueil</button>
-    <button onclick="openGallery()">Galerie</button>
-    <button onclick="openCreate()">Créer / Ajouter</button>
-    <button onclick="showSection('download')">Télécharger</button>
+    <button onclick="openProtected('gallery')">Galerie</button>
+    <button onclick="openProtected('create')">Créer / Ajouter</button>
+    <button onclick="openProtected('download')">Télécharger</button>
   </nav>
 
-  <!-- PASSWORD POPUP -->
-  <div id="passwordBox" class="hidden">
-    <h3>Mot de passe</h3>
-    <input type="password" id="pwd">
-    <button onclick="verifyPassword()">Valider</button>
+  <!-- PASSWORD POPUP (hidden until requested) -->
+  <div id="passwordBox" class="box hidden" aria-hidden="true">
+    <h3>Code administrateur</h3>
+    <input type="password" id="pwd" placeholder="Code">
+    <div style="margin-top:10px">
+      <button class="primary" onclick="verifyPassword()">Valider</button>
+      <button onclick="closePassword()">Annuler</button>
+    </div>
   </div>
 
   <main>
-
-    <!-- HOME -->
     <section id="home" class="section visible">
       <h2>Bienvenue</h2>
-      <p>Portail eQSL TANGO WHISKY</p>
+      <p>Portail eQSL TANGO WHISKY — créer, envoyer, télécharger.</p>
     </section>
 
-    <!-- GALLERY -->
     <section id="gallery" class="section hidden">
       <h2>Galerie</h2>
       <div id="galleryContent">Chargement…</div>
     </section>
 
-    <!-- CREATE -->
     <section id="create" class="section hidden">
       <h2>Créer / Générer une QSL</h2>
 
       <form id="genForm" enctype="multipart/form-data" class="wideForm">
-
         <div class="twoColumns">
-
           <div>
-            <label>Indicatif :</label>
-            <input type="text" name="indicatif" required>
-
-            <label>Date :</label>
-            <input type="text" name="date" placeholder="2025-01-01">
-
-            <label>UTC :</label>
-            <input type="text" name="time" placeholder="12:00">
-
-            <label>Bande :</label>
-            <input type="text" name="band" placeholder="11m">
-
-            <label>Mode :</label>
-            <input type="text" name="mode" placeholder="USB">
-
-            <label>Report :</label>
-            <input type="text" name="report" placeholder="59">
+            <label>Indicatif :</label><input type="text" name="indicatif" required>
+            <label>Date :</label><input type="date" name="date">
+            <label>UTC :</label><input type="time" name="time">
+            <label>Bande :</label><input type="text" name="band" placeholder="ex: 20">
+            <label>Mode :</label><input type="text" name="mode" placeholder="ex: SSB">
+            <label>Report :</label><input type="text" name="report" placeholder="ex: 59">
           </div>
-
           <div>
-            <label>Note :</label>
-            <textarea name="note" maxlength="200" style="height:140px"></textarea>
-
-            <label>Image QSL :</label>
+            <label>Note (max 120 caractères) :</label>
+            <textarea name="note" maxlength="120" style="height:140px"></textarea>
+            <label>Image QSL (obligatoire) :</label>
             <input type="file" name="qsl" accept="image/*" required>
           </div>
-
         </div>
 
-        <button class="primary" type="submit">Générer QSL</button>
+        <div style="margin-top:14px;text-align:center">
+          <button class="primary" type="submit">Générer & Envoyer</button>
+        </div>
       </form>
 
       <div id="genPreview" class="preview"></div>
     </section>
 
-    <!-- DOWNLOAD -->
     <section id="download" class="section hidden">
-      <h2>Télécharger une QSL</h2>
-
-      <input id="dlCall" placeholder="Votre indicatif">
-      <button id="btnSearch" class="primary">Rechercher</button>
-
-      <div id="dlPreview"></div>
+      <h2>Télécharger</h2>
+      <div style="max-width:700px;margin:0 auto;display:flex;gap:8px;">
+        <input id="dlCall" placeholder="Votre indicatif" style="flex:1;padding:10px">
+        <button id="btnSearch" class="primary">Rechercher</button>
+      </div>
+      <div id="dlPreview" style="margin-top:12px"></div>
     </section>
-
   </main>
 
-  <footer>TANGO WHISKY © 2025</footer>
+  <footer>
+    TANGO WHISKY © 2025
+  </footer>
 
   <script src="script.js"></script>
-
 </body>
 </html>
