--- a/public/index.html
+++ b/public/index.html
@@ -16,7 +16,7 @@
     <button onclick="showSection('home')">Accueil</button>
     <button onclick="openProtected('gallery')">Galerie</button>
     <button onclick="openProtected('create')">Créer / Ajouter</button>
-    <button onclick="openProtected('download')">Télécharger</button>
+    <button onclick="showSection('download')">Télécharger</button>
   </nav>
 
   <!-- PASSWORD POPUP (hidden until requested) -->
