--- a/public/index.html
+++ b/public/index.html
@@ -32,7 +32,7 @@
   <main>
     <section id="home" class="section visible">
       <h2>Bienvenue</h2>
-      <p>Portail eQSL TANGO WHISKY — créer, envoyer, télécharger.</p>
+      <p>Portail eQSL TANGO WHISKY —  télécharger.</p>
     </section>
 
     <section id="gallery" class="section hidden">
@@ -79,9 +79,14 @@
     </section>
   </main>
 
-  <footer>
-    TANGO WHISKY © 2025
-  </footer>
+ <footer>
+        <div class="container">
+            <p>&copy;2025 Tango Whisky eqsl- Plateforme pour amateurs radio
+
+            </p>
+            <p>73 de l'équipe Tango Whisky </p>
+        </div>
+    </footer>
 
   <script src="script.js"></script>
 </body>
