--- a/public/index.html
+++ b/public/index.html
@@ -81,10 +81,10 @@
 
  <footer>
         <div class="container">
-            <p>&copy;2025 Tango Whisky eqsl- Plateforme pour amateurs radio
+            <p>&copy;2025 Tango Whisky eqsl
 
             </p>
-            <p>73 de l'équipe Tango Whisky </p>
+            <p>73'S de l'équipe Tango Whisky </p>
         </div>
     </footer>
 
