--- a/public/index.html
+++ b/public/index.html
@@ -20,6 +20,7 @@
   <button onclick="showSection('download')">Télécharger</button>
 </nav>
 
+<!-- POPUP MOT DE PASSE -->
 <div id="passwordBox" class="popup hidden">
   <h3>Mot de passe</h3>
   <input type="password" id="pwd">
@@ -28,69 +29,74 @@
 
 <main>
 
-<section id="home" class="section visible">
-  <h2>Bienvenue</h2>
-  <p>Portail eQSL TANGO WHISKY</p>
-</section>
+  <!-- ACCUEIL -->
+  <section id="home" class="section visible">
+    <h2>Bienvenue</h2>
+    <p>Portail eQSL TANGO WHISKY</p>
+  </section>
 
-<section id="gallery" class="section hidden">
-  <h2>Galerie</h2>
-  <div id="galleryContent">Chargement…</div>
-</section>
+  <!-- GALERIE -->
+  <section id="gallery" class="section hidden">
+    <h2>Galerie</h2>
+    <div id="galleryContent">Chargement…</div>
+  </section>
 
-<section id="create" class="section hidden">
-  <h2>Créer / Générer une QSL</h2>
+  <!-- GENERATION -->
+  <section id="create" class="section hidden">
+    <h2>Créer / Générer une QSL</h2>
 
-  <form id="genForm" enctype="multipart/form-data" class="wideForm">
+    <form id="genForm" enctype="multipart/form-data" class="wideForm">
 
-    <div class="twoColumns">
-      <div>
-        <label>Indicatif :</label>
-        <input type="text" name="indicatif" required>
+      <div class="twoColumns">
+        <div>
+          <label>Indicatif :</label>
+          <input type="text" name="indicatif" required>
 
-        <label>Date :</label>
-        <input type="text" name="date" placeholder="2025-01-01">
+          <label>Date :</label>
+          <input type="text" name="date" placeholder="2025-01-01">
 
-        <label>UTC :</label>
-        <input type="text" name="time" placeholder="12:00">
+          <label>UTC :</label>
+          <input type="text" name="time" placeholder="12:00">
 
-        <label>Bande :</label>
-        <input type="text" name="band" placeholder="11m">
+          <label>Bande :</label>
+          <input type="text" name="band" placeholder="11m">
 
-        <label>Mode :</label>
-        <input type="text" name="mode" placeholder="USB">
+          <label>Mode :</label>
+          <input type="text" name="mode" placeholder="USB">
 
-        <label>Report :</label>
-        <input type="text" name="report" placeholder="59">
+          <label>Report :</label>
+          <input type="text" name="report" placeholder="59">
+        </div>
+
+        <div>
+          <label>Note :</label>
+          <textarea name="note" maxlength="200" style="height:140px"></textarea>
+
+          <label>Image QSL :</label>
+          <input type="file" name="qsl" accept="image/*" required>
+        </div>
       </div>
 
-      <div>
-        <label>Note :</label>
-        <textarea name="note" maxlength="200" style="height:140px"></textarea>
+      <button class="primary" type="submit">Générer QSL</button>
+    </form>
 
-        <label>Image QSL :</label>
-        <input type="file" name="qsl" accept="image/*" required>
-      </div>
-    </div>
+    <div id="genPreview" class="preview"></div>
 
-    <button class="primary" type="submit">Générer QSL</button>
-  </form>
+  </section>
 
-  <div id="genPreview" class="preview"></div>
-
-</section>
-
-<section id="download" class="section hidden">
-  <h2>Télécharger une QSL</h2>
-  <input id="dlCall" placeholder="Votre indicatif">
-  <button id="btnSearch" class="primary">Rechercher</button>
-  <div id="dlPreview"></div>
-</section>
+  <!-- DOWNLOAD -->
+  <section id="download" class="section hidden">
+    <h2>Télécharger une QSL</h2>
+    <input id="dlCall" placeholder="Votre indicatif">
+    <button id="btnSearch" class="primary">Rechercher</button>
+    <div id="dlPreview"></div>
+  </section>
 
 </main>
 
 <footer>TANGO WHISKY © 2025</footer>
 
 <script src="script.js"></script>
+
 </body>
 </html>
